<resources>
    <string name="app_name">KargoBike</string>
    <string name="title_activity_order_checkpoint">OrderCheckpointActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_list_types">activity_list_types</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kargo Bike</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Karko Bike </string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_product">Product</string>
    <string name="menu_order">Orders</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_riders">Riders</string>
    <string name="menu_logout">Riders</string>
    <string name="menu_menu_autoriseUser">Authorise User</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_fragement">MenuFragementActivity</string>
    <string name="menu_users">Users</string>
    <string name="action_about">About</string>
</resources>
