<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.group3.kargobikeproject.ui.orders.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/order_fragment" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.group3.kargobikeproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_products"
        android:name="com.group3.kargobikeproject.ui.products.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.group3.kargobikeproject.ui.orders.UserFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/user_fragment" />nav_modifyProfil
    <fragment
        android:id="@+id/nav_modifyProfil"
        android:name="com.group3.kargobikeproject.ui.user.ModifyProfilFragment"
        android:label="modifyProfil"
        tools:layout="@layout/activity_modify_profil" />
    <fragment
        android:id="@+id/nav_historyOrder"
        android:name="com.group3.kargobikeproject.ui.orders.HistoryOrderFragment"
        android:label="Order history"
        tools:layout="@layout/history_order_fragment" />
    <fragment
        android:id="@+id/nav_bikeservice"
        android:name="com.group3.kargobikeproject.ui.BikeServiceFragment"
        android:label="Bike Service"
        tools:layout="@layout/bikeservice_fragment" />
    <fragment
        android:id="@+id/nav_autorise"
        android:name="com.group3.kargobikeproject.ui.authoriseUser.AuthoriseUserFragment"
        android:label="@string/menu_menu_autoriseUser"
        tools:layout="@layout/authorise_user_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.group3.kargobikeproject.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/logout_fragment" />

</navigation>