<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_border_all_black_24dp"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"
            android:icon="@drawable/ic_person_outline_red_24dp"
            />
é    </group>
    <item android:title="SuperUser"
        android:id="@+id/superUserGroup">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_directions_bike"
                android:title="@string/menu_riders"
                android:visibility="invisible"/>
            <item
                android:id="@+id/nav_bikeservice"
                android:icon="@drawable/ic_menu_bikeservice"
                android:title="Bike Services"
                />
            <item
                android:id="@+id/nav_autorise"
                android:icon="@drawable/ic_person_add_red_24dp"
                android:title="@string/menu_menu_autoriseUser"
                android:visibility="invisible"/>
        </menu>
    </item>

</menu>
